# rocq-lna

./: .gitignore  README.md  test.v
.github/workflows/: release_builder.yml  tests.yml  tests_extension.yml  windows.yml
SC-library/: AS.v  ApplicationAS.v  Framework_common.v  NS.v  SCcoq.opam  SOS.v  TotalMap.v  _CoqProject
SC-library/AS/: FrameworkAS.v
SC-library/NS/: Determinism.v  FrameworkNS.v  FrameworkScopes.v
SC-library/SOS/: Framework_SOS.v  Framework_SOS_small_exp.v  SOS_star_k.v  corr_SOS_NS.v  multi_k.v  strong_progress.v
extension/: .vscode-test.mjs  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
extension/src/: extension.ts  splitWithRange.ts  tactics.ts  types.ts
extension/src/test/: extension.test.ts
extension/src/test/coq-files/: benb_yes_before_pragma.v  benbta_yes_tauto.v  combined_tactics.v  default_no_intros.v  default_no_tauto.v  multiple_lemmas_unfinished.v
extension/src/test/coq-files-expected/: benbta_yes_tauto.json  combined_tactics.json  default_no_intros.json  default_no_tauto.json  multiple_lemmas_unfinished.json
extension/src/test/coq-files-parsed/: benb_yes_before_pragma.json  benbta_yes_tauto.json  combined_tactics.json  default_no_intros.json  default_no_tauto.json  multiple_lemmas_unfinished.json
installer/: README.md  add_custom_nsis.sh  install_packages.sh  packages.cfg  patch_installer.sh  patch_serapi.sh  unselect_packages.sh
questionnaires/: setup_questionnaire.raw  usage_questionnaire.raw
